[package]
name = "git-loc"
description = "Count lines of code over time through Git history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.8", features = ["derive"] }
git2 = "0.18.2"
